# livePhoto2LRHR

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: align_coarse_to_flow_smoke.yaml  align_identity_smoke.yaml  color_match_smoke.yaml  export_final_color_matched_verify.yaml  export_final_smoke.yaml  export_final_verify.yaml  frame_select.yaml  full_pipeline_template.yaml
docs/: operation_manual.md
docs/issues/: 2026-06-24-golden-yaml-absolute-paths.md
real_smoke/flower_quality_demo/: config.yaml
real_smoke/flower_quality_demo_color_final/: config.yaml
real_smoke/heic_livephoto_golden/: adaptive_3d_lut_heic.yaml  diffusion_harmonization_heic.yaml
real_smoke/heic_livephoto_smoke/: frame_select_heic.yaml
real_smoke/livephoto_advanced_algorithms_demo/: config.yaml
real_smoke/livephoto_align_four_tiers/: tier1_global_ecc.yaml  tier2_feature_match.yaml  tier3_hybrid_flow.yaml  tier4_mask_aware.yaml
real_smoke/livephoto_color_five_backends/: adaptive_3d_lut.yaml  diffusion_harmonization.yaml  (+3 more)
tests/: conftest.py  test_align_stage.py  test_alignment_algorithms.py  test_alignment_config.py  test_alignment_registry.py  test_cli.py  test_color_match_algorithms.py  test_color_match_config.py  test_color_match_registry.py  test_color_match_stage.py  test_config.py  test_dinov2_selector.py  test_export_config.py  test_export_dataset.py  test_frame_select_stage.py  test_future_stages.py  test_heic_support.py  test_opencv_selector.py  test_pairing.py  test_quality_metrics.py  test_quality_report.py  test_registry.py  test_runner.py
(+58 files in other folders)
