[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livephoto2lrhr"
version = "0.1.0"
description = "Build LR/HR training pairs from Live Photo images and videos."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "pillow-heif>=0.16.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
dinov2 = [
    "torch>=2.1",
    "torchvision>=0.16",
]

[project.scripts]
livephoto2lrhr = "livephoto2lrhr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
